--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
               <path d="M20 4L8.12 15.88M14.47 14.48L20 20M8.12 8.12L12 12"></path>
             </svg>
           </div>
-          <h2 class="text-lg text-gray-900 font-medium title-font mb-2">No special setup</h2>
+          <h2 class="text-lg text-gray-900 font-medium title-font mb-2">No Special Setup</h2>
           <p class="leading-relaxed text-base">No need for buying domains or web hosting.
-We are here we will manage all stuff for your website.</p>
+We will manage all stuff for your website.</p>
         </div>
       </div>
       <div class="xl:w-1/3 md:w-1/2 p-4">
