--- a/error.html
+++ b/error.html
@@ -11,7 +11,7 @@
   <div class="container px-5 py-24 mx-auto">
     <div class="flex flex-col text-center w-full mb-20">
       <h2 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900"> <font color = "red">Error in sending details.</font></h2>
-      <h1"><font color = "red">Please check your details.</font></h1>
+      <h1"><font color = "red">No worries! Try again real Soon.</font></h1>
       <button class="flex mx-auto mt-16 text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg"><a href = "index.html">Back to Home</a></button>
     </div>
 </div>
