--- a/index.html
+++ b/index.html
@@ -64,20 +64,7 @@
 We are here we will manage all stuff for your website.</p>
         </div>
       </div>
-      <div class="xl:w-1/3 md:w-1/2 p-4">
-        <div class="border border-gray-300 p-6 rounded-lg">
-          <div class="w-10 h-10 inline-flex items-center justify-center rounded-full bg-indigo-100 text-indigo-500 mb-4">
-            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-6 h-6" viewBox="0 0 24 24">
-              <path d="M20 21v-2a4 4 0 00-4-4H8a4 4 0 00-4 4v2"></path>
-              <circle cx="12" cy="7" r="4"></circle>
-            </svg>
-          </div>
-          <h2 class="text-lg text-gray-900 font-medium title-font mb-2">Secure</h2>
-          <p class="leading-relaxed text-base">Your security is our responsibilities!
-                                      Your all info is secure and in safe hands.</p>
-                                      <br>
-        </div>
-      </div>
+     
       <div class="xl:w-1/3 md:w-1/2 p-4">
         <div class="border border-gray-300 p-6 rounded-lg">
           <div class="w-10 h-10 inline-flex items-center justify-center rounded-full bg-indigo-100 text-indigo-500 mb-4">
@@ -98,7 +85,7 @@ We are here we will manage all stuff for your website.</p>
           </div>
           <h2 class="text-lg text-gray-900 font-medium title-font mb-2">Customer Support</h2>
           <p class="leading-relaxed text-base">24\7 customer support.
-Our staffs will always ready to help you. </p>
+              Our staffs will always ready to help you. </p>
         </div>
       </div>
       <div class="xl:w-1/3 md:w-1/2 p-4">
@@ -118,7 +105,7 @@ Our staffs will always ready to help you. </p>
   <div class="container px-5 py-24 mx-auto">
     <div class="flex flex-col text-center w-full mb-20">
       <h1 class="sm:text-4xl text-3xl font-medium title-font mb-2 text-gray-900">Pricing</h1>
-      <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Cheap in price, Best in perfomance!</p>
+      <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Cheap in price, Best in performance!</p>
     </div>
     <div class="lg:w-2/3 w-full mx-auto overflow-auto">
       <table class="table-auto w-full text-left whitespace-no-wrap">
@@ -133,7 +120,7 @@ Our staffs will always ready to help you. </p>
         </thead>
         <tbody>
           <tr>
-            <td class="px-4 py-3">Start</td>
+            <td class="px-4 py-3">Starter</td>
             <td class="px-4 py-3">1 website</td>
             <td class="px-4 py-3">Na</td>
             <td class="px-4 py-3 text-lg text-gray-900">Free</td>
